# LLM-Gemma3-270m-finetune-for-financialQA-Application

./: .gitignore  README.md  pyproject.toml  requirements.txt
pipeline/: LLM_train.py  PushtoHF.py  config.py  evaluation.py  functions.py
results/: evaluation_results_finetuned270m_fin.json  evaluation_results_pretrained_270m_fin.json  fietuned-gemma3-270m.json  pretrained-gemma3-270m.json
